--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Revolutionize your wardrobe</h1>
                 <hr>
-                <p>Transform your outfit selection process with a an intelligent mirror.</p>
+                <p>Transform your outfit selection process with an intelligent mirror.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn More</a>
             </div>
         </div>
@@ -86,10 +86,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Improve your outfit selection process</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <p class="text-faded">Selecting an outfit for the day can be a strenuous activity for busy and time-constrained individuals. Many factors—such as weather, occasion, season, activity—can impact an individual’s outfit selection decision. With a large inventory of items in an individual's wardrobe, sifting through all of one’s clothing can be a tedious and messy process. One may not be able to find what they want to wear because they simply have a disorganized wardrobe, or they simply may not know how to find what they are looking for.</p>
+                    <p class="text-faded"><b>Jasper</b> aims to solve this problem by providing a two-part solution consisting of an interactive smart mirror to assist in outfit selection and a set of location-enabled tags to be placed on clothing items to help with inventory management and tracking.
+
+
+                    </p>
+
                 </div>
             </div>
         </div>
@@ -99,7 +103,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">Features</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -109,34 +113,47 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <h3>Suggest Outfits</h3>
+                        <p class="text-muted">Jasper gives you recommended outfits to wear based on your calendar, weather, and activity.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <h3>Locate Items</h3>
+                        <p class="text-muted">With miniscule tags attached to your clothing, Jasper can locate an exact item of clothing in your house.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <h3>Visualize Outfits</h3>
+                        <p class="text-muted">Explore and try on new outfits for the day without putting any clothes on.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <h3>Manage Inventory</h3>
+                        <p class="text-muted">Sroll through your inventory of clothes to keep track of what you own.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+
+
+    <aside class="bg-dark">
+        <div class="container text-center">
+           <div class="embed-responsive embed-responsive-16by9">
+             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RQPLEDsEK6g"></iframe>
+          </div>
+
+        </div>
+    </aside>
+
+
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
@@ -248,28 +265,29 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        <!--<i class="fa fa-4x fa-diamond text-primary sr-icons"></i>-->
+                        <center><img src="img/steven.png" class="img-responsive" alt="" style="width:60%"></center>
                         <h3>Steven Austin</h3>
                         <p class="text-muted">Design Researcher</br>Junior, Computer Science</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
+                        <center><img src="img/dylan.png" class="img-responsive" alt="" style="width:60%"></center>
                         <h3>Dylan Babbs</h3>
                         <p class="text-muted">Product Manager</br>Senior, Informatics</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
+                        <center><img src="img/steven.png" class="img-responsive" alt="" style="width:60%"></center>
                         <h3>Hao Liu</h3>
                         <p class="text-muted">UX Researcher</br>Senior, Computer Science</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
+                        <center><img src="img/steven.png" class="img-responsive" alt="" style="width:60%"></center>
                         <h3>Tong Shen</h3>
                         <p class="text-muted">Product Engineer</br>Senior, Computer Science</p>
                     </div>
