add tong & hao photos

--- a/index.html
+++ b/index.html
@@ -280,14 +280,14 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <center><img src="img/steven.png" class="img-responsive" alt="" style="width:60%"></center>
+                        <center><img src="img/hao.png" class="img-responsive" alt="" style="width:60%"></center>
                         <h3>Hao Liu</h3>
                         <p class="text-muted">UX Researcher</br>Senior, Computer Science</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <center><img src="img/steven.png" class="img-responsive" alt="" style="width:60%"></center>
+                        <center><img src="img/tong.png" class="img-responsive" alt="" style="width:60%"></center>
                         <h3>Tong Shen</h3>
                         <p class="text-muted">Product Engineer</br>Senior, Computer Science</p>
                     </div>
