--- a/index.html
+++ b/index.html
@@ -112,28 +112,28 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-star text-primary sr-icons"></i>
                         <h3>Suggest Outfits</h3>
                         <p class="text-muted">Jasper gives you recommended outfits to wear based on your calendar, weather, and activity.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-compass text-primary sr-icons"></i>
                         <h3>Locate Items</h3>
                         <p class="text-muted">With miniscule tags attached to your clothing, Jasper can locate an exact item of clothing in your house.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-eye text-primary sr-icons"></i>
                         <h3>Visualize Outfits</h3>
                         <p class="text-muted">Explore and try on new outfits for the day without putting any clothes on.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-archive text-primary sr-icons"></i>
                         <h3>Manage Inventory</h3>
                         <p class="text-muted">Sroll through your inventory of clothes to keep track of what you own.</p>
                     </div>
@@ -159,90 +159,90 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                    <a href="img/mockups/Onboarding.jpg" class="portfolio-box">
+                        <img src="img/mockups/Onboarding.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Digital mockup
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Onboarding screen
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                    <a href="img/mockups/Shirt%202.png" class="portfolio-box">
+                        <img src="img/mockups/Shirt%202.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Digital mockup
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Outfit selection – Tops
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+                    <a href="img/mockups/Pant%202.jpg" class="portfolio-box">
+                        <img src="img/mockups/Pant%202.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Digital mockup
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Outfit selection – Bottoms
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
+                    <a href="img/mockups/Location%201.jpg" class="portfolio-box">
+                        <img src="img/mockups/Location%201.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Digital mockup
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Filter view
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                    <a href="img/mockups/Location%202.jpg" class="portfolio-box">
+                        <img src="img/mockups/Location%202.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Digital mockup
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Item location
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                    <a href="img/mockups/expanded%20view.jpg" class="portfolio-box">
+                        <img src="img/mockups/expanded%20view.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Digital mockup
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Expanded view
                                 </div>
                             </div>
                         </div>
@@ -296,6 +296,7 @@
         </div>
     </section>
 
+<!--
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
@@ -304,6 +305,55 @@
             </div>
         </div>
     </aside>
+-->
+
+    <section id="docs" class="bg-dark">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Documentation</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <!--<i class="fa fa-4x fa-diamond text-primary sr-icons"></i>-->
+                        <center><i class="fa fa-4x fa-file-text-o text-primary sr-icons"></i></center>
+                        <h3>Initial Report</h3>
+                        <br />
+                        <a href="./files/jasper_intial_report.pdf" class="btn btn-default btn-xl sr-button">Download</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <center><i class="fa fa-4x fa-file-pdf-o text-primary sr-icons"></i></center>
+                        <h3>Initial Presentation</h3>
+                        <br />
+                        <a href="./files/jasper_initial_presentation.pdf" class="btn btn-default btn-xl sr-button">Download</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <center><i class="fa fa-4x fa-file-text text-primary sr-icons"></i></center>
+                        <h3>Final Report</h3>
+                        <br />
+                        <a href="./files/jasper_final_report.pdf" class="btn btn-default btn-xl sr-button">Download</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <center><i class="fa fa-4x fa-file-pdf-o text-primary sr-icons"></i></center>
+                        <h3>Final Presentation</h3>
+                        <br />
+                        <a href="./files/jasper_final_presentation.pdf" class="btn btn-default btn-xl sr-button">Download</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section id="contact">
         <div class="container">
