fb default img email list

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta property="og:image:type" content="img/header.jpg">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="1024">
 
     <title>Jasper</title>
 
@@ -379,7 +382,7 @@
             </div>
             <div class="col-lg-4 text-center">
                 <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                <p><a href="mailto:your-email@your-domain.com">customer-service@jasper.com</a></p>
+                <p><a href="mailto:your-email@your-domain.com">cse440jasper@uw.edj</a></p>
             </div>
         </div>
     </div>
