--- a/index.html
+++ b/index.html
@@ -381,10 +381,10 @@
                 <i class="fa fa-phone fa-3x sr-contact"></i>
                 <p>800-1-JASPER</p>
             </div>
-            <div class="col-lg-4 text-center">
-                <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                <p><a href="mailto:your-email@your-domain.com">cse440jasper@uw.edj</a></p>
-            </div>
+            <!--<div class="col-lg-4 text-center">-->
+                <!--<i class="fa fa-envelope-o fa-3x sr-contact"></i>-->
+                <!--<p><a href="mailto:your-email@your-domain.com">cse440jasper@uw.edu</a></p>-->
+            <!--</div>-->
         </div>
     </div>
 </section>
