--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta property="og:image" content="img/header.jpg">
-    <meta property="og:image:type" content="img/header.jpg">
+    <meta property="og:image:type" content="img/jpg">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
 
@@ -377,7 +377,7 @@
                 <p>Ready to use a mirror comes from the future?"
                     <br>Give us a call or send us an email and we will get back to you as soon as possible!</p>
             </div>
-            <div class="col-lg-4 col-lg-offset-2 text-center">
+            <div class="col-lg-4 col-lg-offset-4 text-center">
                 <i class="fa fa-phone fa-3x sr-contact"></i>
                 <p>800-1-JASPER</p>
             </div>
