--- a/index.html
+++ b/index.html
@@ -374,17 +374,19 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
                 <hr class="primary">
-                <p>Ready to use a mirror comes from the future?"
-                    <br>Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                <p>Ready to use a mirror comes from the future? Send us an email!</p>
             </div>
             <div class="col-lg-4 col-lg-offset-4 text-center">
-                <i class="fa fa-phone fa-3x sr-contact"></i>
-                <p>800-1-JASPER</p>
+                <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+                <p><a href="mailto:your-email@your-domain.com">dbabbs@uw.edu</a></p>
             </div>
-            <!--<div class="col-lg-4 text-center">-->
-                <!--<i class="fa fa-envelope-o fa-3x sr-contact"></i>-->
-                <!--<p><a href="mailto:your-email@your-domain.com">cse440jasper@uw.edu</a></p>-->
-            <!--</div>-->
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <p>Want to see more awesome designs? Visit our projects website!</p>
+            </div>
+            <div class="col-lg-4 col-lg-offset-4 text-center">
+                <i class="fa fa-external-link fa-3x sr-contact"></i>
+                <p><a href="http://courses.cs.washington.edu/courses/cse440/17wi/projects.html">UW CSE440 HCI</a></p>
+            </div>
         </div>
     </div>
 </section>
