--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 
 <head>
-
+    <link rel="icon"
+          type="image/png"
+          href="img/project_thumb.png">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
     <meta property="og:image" content="img/header.jpg">
-    <meta property="og:image:type" content="img/jpg">
+    <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
 
