--- a/index.html
+++ b/index.html
@@ -86,9 +86,12 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1 id="homeHeading">Revolutionize your wardrobe</h1>
+            <h3 id="homeHeading">REVOLUTIONIZE YOUR WARDROBE WITH</h3>
+            <br>
+            <h1>Jasper</h1>
+            <br>
             <hr>
-            <p>Transform your outfit selection process with an intelligent mirror.</p>
+            <p>Transform your outfit selection process with an intelligent mirror</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn More</a>
         </div>
     </div>
