--- a/index.html
+++ b/index.html
@@ -376,14 +376,14 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
                 <hr class="primary">
-                <p>Ready to use a mirror comes from the future? Send us an email!</p>
+                <p>Ready to use a mirror of the future? Send us an email!</p>
             </div>
             <div class="col-lg-4 col-lg-offset-4 text-center">
                 <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                 <p><a href="mailto:your-email@your-domain.com">dbabbs@uw.edu</a></p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <p>Want to see more awesome designs? Visit our projects website!</p>
+                <p>Want to see more awesome designs? Check out the course website!</p>
             </div>
             <div class="col-lg-4 col-lg-offset-4 text-center">
                 <i class="fa fa-external-link fa-3x sr-contact"></i>
