--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-archive text-primary sr-icons"></i>
                     <h3>Manage Inventory</h3>
-                    <p class="text-muted">Sroll through your inventory of clothes to keep track of what you own.</p>
+                    <p class="text-muted">Scroll through your inventory of clothes to keep track of what you own.</p>
                 </div>
             </div>
         </div>
