slight text edits in footer

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Let's Get In Touch!</h2>
+                <h2 class="section-heading">Learn More</h2>
                 <hr class="primary">
                 <p>Ready to use a mirror of the future? Send us an email!</p>
             </div>
