--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h3 id="homeHeading">REVOLUTIONIZE YOUR WARDROBE WITH</h3>
-            <br>
-            <h1>Jasper</h1>
+            <h2 id="homeHeading">REVOLUTIONIZE YOUR WARDROBE</h2>
             <br>
             <hr>
             <p>Transform your outfit selection process with an intelligent mirror</p>
@@ -169,9 +167,8 @@
     </div>
     <div class="container text-center">
         <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=4at5sUbkfu4&feature=youtu.be"></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/xJRcWp7Tohk" frameborder="0" allowfullscreen></iframe>
         </div>
-
     </div>
 </section>
 
