--- a/index.html
+++ b/index.html
@@ -374,16 +374,16 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Let's Get In Touch!</h2>
+                <h2 class="section-heading">Contact Us</h2>
                 <hr class="primary">
-                <p>Ready to use a mirror comes from the future? Send us an email!</p>
+                <p>Ready to use a mirror of the future? Send us an email!</p>
             </div>
             <div class="col-lg-4 col-lg-offset-4 text-center">
                 <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                 <p><a href="mailto:your-email@your-domain.com">dbabbs@uw.edu</a></p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <p>Want to see more awesome designs? Visit our projects website!</p>
+                <p>Want to see more designs? Visit the course website!</p>
             </div>
             <div class="col-lg-4 col-lg-offset-4 text-center">
                 <i class="fa fa-external-link fa-3x sr-contact"></i>
