--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h3 id="homeHeading">REVOLUTIONIZE YOUR WARDROBE</h3>
+            <h1 id="homeHeading">REVOLUTIONIZE YOUR WARDROBE</h1>
             <br>
             <hr>
             <p>Transform your outfit selection process with an intelligent mirror</p>
@@ -148,7 +148,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-archive text-primary sr-icons"></i>
                     <h3>Manage Inventory</h3>
-                    <p class="text-muted">Sroll through your inventory of clothes to keep track of what you own.</p>
+                    <p class="text-muted">Scroll through your inventory of clothes to keep track of what you own.</p>
                 </div>
             </div>
         </div>
@@ -167,7 +167,7 @@
     </div>
     <div class="container text-center">
         <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/xJRcWp7Tohk" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/5dZknEhLIZI" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 </section>
